<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/action">
        <menu>
            <item android:title="@string/userhome"
                android:id="@+id/home_frag"
                android:icon="@drawable/ic_baseline_home_24"/>
            <item android:title="@string/prof"
                android:id="@+id/profile_frag"
                android:icon="@drawable/ic_baseline_person_24"/>

            <item android:title="@string/complaint"
                android:id="@+id/stat_frag"
                android:icon="@drawable/ic_baseline_hourglass_empty_24"/>
            <item android:title="@string/pickup"
                android:id="@+id/pick_frag"
                android:icon="@drawable/ic_baseline_location_on_24"/>
            <item android:title="@string/sewa"

                android:id="@+id/fund_frag"
                android:icon="@drawable/ic_baseline_attach_money_24"/>
            <item android:title="@string/adoptANIM"
                android:id="@+id/adopt_frag"
                android:icon="@drawable/ic_baseline_home_24"/>
            <item android:title="@string/NEWS"


                android:id="@+id/news_frag"
                android:icon="@drawable/ic_baseline_question_answer_24"/>

            <item android:title="@string/info"

                android:id="@+id/infoslider"
                android:icon="@drawable/ic_baseline_info_24"/>

            <item android:title="@string/stats"
                android:id="@+id/num_frag"
                android:icon="@drawable/ic_baseline_insert_chart_24"/>

        </menu>
    </item>
    <item android:title="@string/help">
        <menu>

            <item android:title="@string/feedback"
                android:id="@+id/feedback"
                android:icon="@drawable/ic_baseline_feedback_24"/>
            <item android:title="@string/faq"

                android:id="@+id/sup_frag"
                android:icon="@drawable/ic_baseline_info_24"/>
        </menu>
    </item>

</menu>
